framec/tests/snapshots/java_snapshots__linear_fsm.snap
---
source: framec/tests/java_snapshots.rs
expression: "compile_fixture(\"01_linear_fsm\", \"java\")"
---
class LinearFsmFrameEvent {
    String _message;
    java.util.ArrayList<Object> _parameters;

    LinearFsmFrameEvent(String message) {
        this._message = message;
        this._parameters = new java.util.ArrayList<>();
    }

    LinearFsmFrameEvent(String message, java.util.ArrayList<Object> parameters) {
        this._message = message;
        this._parameters = parameters;
    }
}

class LinearFsmFrameContext {
    LinearFsmFrameEvent _event;
    Object _return;
    java.util.HashMap<String, Object> _data;
    boolean _transitioned = false;

    LinearFsmFrameContext(LinearFsmFrameEvent event, Object defaultReturn) {
        this._event = event;
        this._return = defaultReturn;
        this._data = new java.util.HashMap<>();
        this._transitioned = false;
    }
}

class LinearFsmCompartment {
    String state;
    java.util.ArrayList<Object> state_args;
    java.util.HashMap<String, Object> state_vars;
    java.util.ArrayList<Object> enter_args;
    java.util.ArrayList<Object> exit_args;
    LinearFsmFrameEvent forward_event;
    LinearFsmCompartment parent_compartment;

    LinearFsmCompartment(String state) {
        this.state = state;
        this.state_args = new java.util.ArrayList<>();
        this.state_vars = new java.util.HashMap<>();
        this.enter_args = new java.util.ArrayList<>();
        this.exit_args = new java.util.ArrayList<>();
        this.forward_event = null;
        this.parent_compartment = null;
    }

    LinearFsmCompartment copy() {
        LinearFsmCompartment c = new LinearFsmCompartment(this.state);
        c.state_args = new java.util.ArrayList<>(this.state_args);
        c.state_vars = new java.util.HashMap<>(this.state_vars);
        c.enter_args = new java.util.ArrayList<>(this.enter_args);
        c.exit_args = new java.util.ArrayList<>(this.exit_args);
        c.forward_event = this.forward_event;
        c.parent_compartment = this.parent_compartment;
        return c;
    }
}

public class LinearFsm {
    private java.util.ArrayList<LinearFsmCompartment> _state_stack;
    private LinearFsmCompartment __compartment;
    private LinearFsmCompartment __next_compartment;
    private java.util.ArrayList<LinearFsmFrameContext> _context_stack;
    public int total = 0;

    public LinearFsm() {
        _state_stack = new java.util.ArrayList<>();
        _context_stack = new java.util.ArrayList<>();
        this.__compartment = __prepareEnter("Idle", new java.util.ArrayList<>(), new java.util.ArrayList<>());
        this.__next_compartment = null;
    }

    public static LinearFsm __create() {
        LinearFsm c = new LinearFsm();
        LinearFsmFrameEvent __e = new LinearFsmFrameEvent("$>", c.__compartment.enter_args);
        LinearFsmFrameContext __ctx = new LinearFsmFrameContext(__e, null);
        c._context_stack.add(__ctx);
        c.__kernel(__e);
        c._context_stack.remove(c._context_stack.size() - 1);
        return c;
    }

    private java.util.HashMap<String, java.util.ArrayList<String>> hsm_chain() {
        java.util.HashMap<String, java.util.ArrayList<String>> m = new java.util.HashMap<>();
        m.put("Idle", new java.util.ArrayList<>(java.util.Arrays.asList("Idle")));
        m.put("Active", new java.util.ArrayList<>(java.util.Arrays.asList("Active")));
        m.put("Done", new java.util.ArrayList<>(java.util.Arrays.asList("Done")));
        return m;
    }
    private LinearFsmCompartment __prepareEnter(String leaf, java.util.ArrayList<Object> state_args, java.util.ArrayList<Object> enter_args) {
        LinearFsmCompartment comp = null;
        for (String name : hsm_chain().get(leaf)) {
            LinearFsmCompartment new_comp = new LinearFsmCompartment(name);
            new_comp.state_args = new java.util.ArrayList<>(state_args);
            new_comp.enter_args = new java.util.ArrayList<>(enter_args);
            new_comp.parent_compartment = comp;
            comp = new_comp;
        }
        return comp;
    }

    private void __prepareExit(java.util.ArrayList<Object> exit_args) {
        LinearFsmCompartment comp = __compartment;
        while (comp != null) {
            comp.exit_args = new java.util.ArrayList<>(exit_args);
            comp = comp.parent_compartment;
        }
    }

    private void __kernel(LinearFsmFrameEvent __e) {
        // Route event to current state.
        __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment != null) {
            LinearFsmCompartment next_compartment = __next_compartment;
            __next_compartment = null;
            // Exit the current (leaf) state.
            LinearFsmFrameEvent exit_event = new LinearFsmFrameEvent("<$", __compartment.exit_args);
            __router(exit_event);
            // Switch to the new compartment.
            __compartment = next_compartment;
            // Three-branch forward-event handling.
            LinearFsmFrameEvent forward_event = next_compartment.forward_event;
            next_compartment.forward_event = null;
            if (forward_event == null) {
                // No forwarded event — synthesize a fresh $>.
                LinearFsmFrameEvent enter_event = new LinearFsmFrameEvent("$>", __compartment.enter_args);
                __router(enter_event);
            } else if (forward_event._message.equals("$>")) {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                LinearFsmFrameEvent enter_event = new LinearFsmFrameEvent("$>", __compartment.enter_args);
                __router(enter_event);
                __router(forward_event);
            }
            for (LinearFsmFrameContext ctx : _context_stack) {
                ctx._transitioned = true;
            }
        }
    }

    private void __router(LinearFsmFrameEvent __e) {
        if (__compartment.state.equals("Idle")) {
            _state_Idle(__e, __compartment);
        } else if (__compartment.state.equals("Active")) {
            _state_Active(__e, __compartment);
        } else if (__compartment.state.equals("Done")) {
            _state_Done(__e, __compartment);
        }
    }

    private void __transition(LinearFsmCompartment next) {
        __next_compartment = next;
    }

    public void start() {
        LinearFsmFrameEvent __e = new LinearFsmFrameEvent("start", new java.util.ArrayList<>());
        LinearFsmFrameContext __ctx = new LinearFsmFrameContext(__e, null);
        _context_stack.add(__ctx);
        __kernel(_context_stack.get(_context_stack.size() - 1)._event);
        _context_stack.remove(_context_stack.size() - 1);
    }

    public void progress(int amount) {
        LinearFsmFrameEvent __e = new LinearFsmFrameEvent("progress", new java.util.ArrayList<>(java.util.Arrays.asList(amount)));
        LinearFsmFrameContext __ctx = new LinearFsmFrameContext(__e, null);
        _context_stack.add(__ctx);
        __kernel(_context_stack.get(_context_stack.size() - 1)._event);
        _context_stack.remove(_context_stack.size() - 1);
    }

    public void finish() {
        LinearFsmFrameEvent __e = new LinearFsmFrameEvent("finish", new java.util.ArrayList<>());
        LinearFsmFrameContext __ctx = new LinearFsmFrameContext(__e, null);
        _context_stack.add(__ctx);
        __kernel(_context_stack.get(_context_stack.size() - 1)._event);
        _context_stack.remove(_context_stack.size() - 1);
    }

    private void _state_Idle(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {
        if (__e._message.equals("start")) {
            this._s_Idle_hdl_user_start(__e, compartment);
            return;
        }
    }

    private void _state_Active(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {
        if (__e._message.equals("finish")) {
            this._s_Active_hdl_user_finish(__e, compartment);
            return;
        }
        if (__e._message.equals("progress")) {
            this._s_Active_hdl_user_progress(__e, compartment);
            return;
        }
    }

    private void _state_Done(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {

    }

    private void _s_Idle_hdl_user_start(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {
        LinearFsmCompartment __compartment = __prepareEnter("Active", new java.util.ArrayList<>(), new java.util.ArrayList<>());
        __transition(__compartment);
        return;
    }

    private void _s_Active_hdl_user_finish(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {
        LinearFsmCompartment __compartment = __prepareEnter("Done", new java.util.ArrayList<>(), new java.util.ArrayList<>());
        __transition(__compartment);
        return;
    }

    private void _s_Active_hdl_user_progress(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {
        int amount = ((Number) __e._parameters.get(0)).intValue();
        // self mutation exercised below via domain field
        self.total = self.total + amount
    }
}
